# sports-footage-autotrim

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
cv-pipeline/: cv_pipeline.md
cv-pipeline/calibration/: README.md  court_bounds_export.json  court_homography.npz  court_homography.py  court_homography_interactive.py  court_overlay.py  court_payloads.json  fivb_court_geometry.txt  homography-test.py  homography_io.py  image_io.py  label_studio_keypoints.py  review_court_calibrations_db.py
cv-pipeline/pose-based-feature-extraction/: clip_pred_timeline.py  feature_lab.py  features-parquet-columns.md  pose-feature-extraction-plan.md  run_flow.md
cv-pipeline/pose-detection/: README.md  fetch_s3_clip.py  foot_topdown_experiment.py  pose_side_by_side_video.py
data/: fetch_data.py  preprocess_labels.py  project-1-at-2026-04-28-04-06-975ac587.json  project-1-at-2026-05-13-05-23-e1904229.json  project-1-at-2026-05-13-18-50-acf980ac.json
data_labeling/: README.md  Untitled  __init__.py  court_keypoints.py  ingest_youtube_source.py  labeling_inventory.py  prep_videos.py  push_annotations.py  push_court_calibration.py  push_timeline_annotation.py  push_timeline_annotation_export.py
docs/: annotation_guide.md  annotation_schema_and_systems.md  schema.md
docs/annotation_process/: README.md  (+4 more)
eval/: README.md
feature_extraction/: CLOUD_DEPLOY.md  Dockerfile  PLAN.md  README.md  WANDB.md  __init__.py  clip_split.py  finalize_run.py  job.py  manifest.py  requirements-worker.txt  s3_layout.py  s3_upload.py  timing.py  wandb_publish.py
notebooks/: placeholder_notebook.ipynb
pose-detection/: README.md  fetch_s3_clip.py  pose_side_by_side_video.py
scripts/: download_labelled_sample.py  prep_videos.py  push_annotations.py
src/: db.py
training-pipeline/: README.md
video-editor/: index.html  main.js  package-lock.json  package.json  preload.js
weekly-updates/: initial_proposal.md  may_8_progress_update.md
workdir/: inspect_features.py
(+67 files in other folders)
