[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-footage-autotrim"
version = "0.1.0"
description = "Pipeline for downloading, segmenting, annotating, and tracking volleyball footage."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
cv = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]